removed checkpoint files

--- a/CompareForeignPerformance.ipynb
+++ b/CompareForeignPerformance.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare and visualize performance of a domestic asset vs foreign\n",
+    "Visualize performance of a domestic vs. foreign asset adjusted for exchange rate\n",
     "==="
    ]
   },
